List of users to accept auto-approvals

--- a/.github/actions/auto_approval/action.yml
+++ b/.github/actions/auto_approval/action.yml
@@ -7,6 +7,9 @@ inputs:
   token:
     description: "GitHub Token"
     required: true
+  allowed_users:
+    description: "Which users can be auto-approved"
+    required: true
 runs:
   using: 'node16'
   main: 'dist/index.js'
