--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: ./.github/actions/auto_approval
         with:
           token: ${{ secrets.GH_ACTIONS_PLAYGROUND_RW }}
-          allowed_users: menny, unknown, yes_known
+          allowed_users: unknown, yes_known
