--- a/.github/actions/auto_approval/package.json
+++ b/.github/actions/auto_approval/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build index.js && git add -f dist/index.js"
+    "build": "ncc build index.js",
+    "beauty": "js-beautify -r index.js"
   },
   "author": "menny",
   "license": "Apache-2.0",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1"
+  },
+  "devDependencies": {
+    "js-beautify": "^1.14.7"
   }
 }
