--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3.2.0
       - uses: actions/setup-node@v3
-        with: 16.x
+        with:
+          node-version: 16
+          cache: 'npm'
       - run: npm ci
       - run: npm run lint
       - run: npm run pretty-check
