--- a/.github/actions/auto_approval/package.json
+++ b/.github/actions/auto_approval/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build index.js",
-    "beauty": "js-beautify -r index.js"
+    "build": "ncc build index.js"
   },
   "author": "menny",
   "license": "Apache-2.0",
