--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,7 +13,7 @@ env:
   TMPDIR: "/tmp"
 
 jobs:
-  checks:
+  js-checks:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3.2.0
